# dispatcher

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.sh  common.pri  config.h.in  dispatcher.pro  install-dependencies.sh  makefile.vc  qtutils.pri  schedulers_lab.sln
.deps/: qt-installer-windows.qs
cmake/Modules/: FindBotan.cmake
common/qtutils/: fileio.h  literals.h
dispatcher/: CMakeLists.txt  aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  dispatcher.pro  fontscale.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memorytask.cpp  memorytask.h  memorytask.ui  processestask.cpp  processestask.h  processestask.ui  resources.rc  resources.rc.in
dispatcher.AppDir/: dispatcher.desktop
dispatcher/dialogs/: allocatememorydialog.ui  createprocessdialog.ui
dispatcher/listitems/: memoryblockitem.cpp  memoryblockitem.h
dispatcher/widgets/: processestablewidget.cpp
docs/: TASK.md  task.md
docs/user-manual/: Gemfile  index.adoc  section-1.adoc  section-2.adoc  theme.yml
fonts/: fonts.qrc
generator/: CMakeLists.txt  generator.pro  main.cpp
generator/generators/: memory_task.h  processes_task.h  rand_utils.h
generator/generators/processes_task/: task_abstract_generator.h  task_fcfs_generator.h  task_generators.h  task_linuxo1_generator.h  task_roundrobin_generator.h  task_sjn_generator.h  task_sjt_generator.h  task_srt_generator.h  task_unix_generator.h  task_winnt_generator.h
gui/: aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  gui.pro  gui.vcxproj  gui.vcxproj.filters  literals.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memorytask.cpp  memorytask.h  memorytask.ui  models.h  presenters.h  processestask.cpp  processestask.h  processestask.ui  resources.qrc  taskgetter.h  views.h  widgets.h
gui/dialogs/: allocatememorydialog.cpp  allocatememorydialog.h  allocatememorydialog.ui  createprocessdialog.cpp  createprocessdialog.h  createprocessdialog.ui
gui/listitems/: memoryblockitem.cpp  memoryblockitem.h
gui/menus/: memoryblockmenu.cpp  memoryblockmenu.h  processmenu.cpp  processmenu.h
gui/widgets/: processestablewidget.cpp  processestablewidget.h  queuelistwidget.cpp  queuelistwidget.h
icon/icns/: dispatcher.icns  taskbuilder.icns
qtutils/: CMakeLists.txt  qtutils.pro
qtutils/qtutils/: cryptography.h  fileio.h  fontscale.h  literals.h
schedulers/: CMakeLists.txt  config.cpp  config.h  main.cpp  schedulers.pro  schedulers.vcxproj  schedulers.vcxproj.filters  test_memory.cpp  test_memory.h  test_processes.h
schedulers/algo/memory/: exceptions.h  operations.h  requests.h  strategies.h  types.cpp  types.h
schedulers/algo/processes/: exceptions.h  helpers.h  operations.h  requests.h  roundrobin.cpp  strategies.h  types.h
schedulers/algo/processes/strategies/: abstract.h  fcfs.h  linuxo1.h  roundrobin.h  sjn.h  sjt.h  srt.h  unix.h  winnt.h
schedulers/samples/: task_01.json  task_02.json
schedulers/utils/: exceptions.h  io.cpp  io.h  overload.h  tasks.h
taskbuilder/: CMakeLists.txt  aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  abstracttaskbuilder.h  historynavigator.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memorytaskbuilder.cpp  memorytaskbuilder.h  memorytaskbuilder.ui  processestaskbuilder.cpp  processestaskbuilder.h  processestaskbuilder.ui  resources.rc  taskbuilder.pro
taskbuilder.AppDir/: taskbuilder.desktop
taskbuilder/dialogs/: allocatememorydialog.cpp  allocatememorydialog.h  freememorydialog.cpp  freememorydialog.h  freememorydialog.ui  pidinputdialog.cpp  pidinputdialog.h  pidinputdialog.ui  tasktypechooser.cpp  tasktypechooser.h  tasktypechooser.ui  terminateiodialog.cpp  terminateiodialog.h  terminateiodialog.ui
taskbuilder/menus/: memorytaskaddrequestmenu.cpp  memorytaskaddrequestmenu.h  processtaskaddrequestmenu.cpp  processtaskaddrequestmenu.h  requestitemmenu.cpp  requestitemmenu.h  taskitemmenu.cpp  taskitemmenu.h
taskbuilder/widgets/: processestablewidget.cpp  reorderablelistwidget.h
tests/: CMakeLists.txt  main.cpp  memory.cpp  processes.cpp  test_memory.cpp  test_memory.h  test_processes.h  tests.pro
tests/memory/: memory_operations.cpp  memory_requests.cpp  memory_strategies.cpp  memory_types.cpp  operations.cpp  requests.cpp
tests/processes/: processes_helpers.cpp  processes_operations.cpp  processes_requests.cpp  processes_types.cpp  requests.cpp  types.cpp
translations/: translations.qrc
user-manual/: index.html
widgets/: CMakeLists.txt  processestablewidget.cpp  processestablewidget.h  reorderablelistwidget.cpp  reorderablelistwidget.h  resources.qrc  resourceshelper.cpp  widgets.pro
widgets/dialogs/: allocatememorydialog.cpp  allocatememorydialog.h  allocatememorydialog.ui  createprocessdialog.cpp  createprocessdialog.h  createprocessdialog.ui
widgets/listitems/: memoryblockitem.cpp  memoryblockitem.h
widgets/menus/: memoryblockmenu.cpp  memoryblockmenu.h  processmenu.cpp  processmenu.h
